--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,384 @@
-.App {
-  text-align: center;
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+.navLinks{
+  text-decoration: none;
+    padding: 10px;
+}
+.slick-slider {
+  width: 90%;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navLinks img{
+  width: 120px;
+  height: 70px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.left-nav{
+  float: right;
+  margin: 25px;
+    font-size: 25px;
+}
+nav{
+  padding: 10px;
+  background-color: cadetblue;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* music player */
+html, body{height:100%;}
+#icerik{
+  margin: 0 auto -50px;
+  background-size:contain;
+  background-position:center center;
+  background-repeat:no-repeat;
+}
+
+#player{
+  height:50px;
+  color:#FFF;
+  background:#333;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+#player.online{
+    border-top:4px solid #006CFE;
+}
+
+#player.offline{
+    border-top:4px solid #D9534F;
+}
+
+#player #bilgiler{
+
+  width:47%;
+  float:left;
+}
+
+#player #bilgiler #kapak{
+  width:54px;
+  height:54px;
+  margin-top:-8px;
+  background:#AAA;
+  border:3px solid #FFF;
+  box-shadow:0 0 10px rgba(0,0,0,0.5);
+  float:left;
+}
+#player #bilgiler #kapak img{
+  width:100%;
+  height:100%;
+}
+
+#player #bilgiler .radyo{
+  color:#FFF;
+  margin:2px 0 0 15px;
+  display:inline-block;
+}
+
+#player.online #bilgiler .radyo{
+  -webkit-animation: glowOn .5s infinite alternate;
+}
+
+#player.offline #bilgiler .radyo{
+  -webkit-animation: glowOff .5s infinite alternate;
+}
+
+#player #bilgiler .sarki{
+  font-size:12px;
+  margin:2px 0 0 15px;
+  display:inline-block;
+}
+
+#player #bilgiler .sarki strong{
+  color:#999;
+}
+
+#player #bilgiler .liste, #player #bilgiler .istek{
+  width:32px;
+  height:32px;
+  margin:-14px 1px 0 0;
+  text-align:center;
+  color:#999;
+  text-shadow:0 0 0px #000;
+  font-size:16px;
+  line-height:2.2;
+  float:right;
+}
+#player #bilgiler .istek i{
+  width:100%;
+  height:100%;
+  display:block;
+  line-height:1.9;
+}
+
+
+#player.online #kontrol:hover, #player.online #bilgiler .liste:hover, #player.online #bilgiler .istek:hover, #player.online #sag .yenile:hover, #player.online #sag .sessiz:hover, #player.online #sosyal li:hover, #player.online #sosyal li:hover > a{
+  cursor:pointer;
+  background:#006CFE;
+  color:#FFF;
+}
+
+#player.offline #kontrol:hover, #player.offline #bilgiler .liste:hover, #player.offline #bilgiler .istek:hover, #player.offline #sag .yenile:hover, #player.offline #sag .sessiz:hover, #player.offline #sosyal li:hover, #player.offline #sosyal li:hover > a{
+  cursor:pointer;
+  background:#D9534F;
+  color:#FFF;
+}
+
+#player #kontrol{
+  width:50px;
+  height:46px;
+  position:absolute;
+  left:50%;
+  margin-left:-25px;
+  background:#131411;
+  text-align:center;
+  font-size:24px;
+  line-height:2.2;
+}
+
+#player.online #kontrol{
+  background:#006CFE;
+}
+
+#player.offline #kontrol{
+  background:#D9534F;
+}
+
+#player #sag .yenile{
+  width:32px;
+  height:32px;
+  margin:8px 1px 0 70px;
+  text-align:center;
+  color:#999;
+  text-shadow:0 0 0px #000;
+  font-size:16px;
+  line-height:2.2;
+  float:left;
+}
+
+#player #sag .sessiz{
+  width:32px;
+  height:32px;
+  margin:8px 1px 0 10px;
+  text-align:center;
+  color:#999;
+  text-shadow:0 0 0px #000;
+  font-size:16px;
+  line-height:2.2;
+  float:left;
+}
+
+#mesaj{
+  width:280px;
+  margin:6px 5px 0 5px;
+  padding:5px 10px;
+  color:#999;
+  display:inline-block;
+  background:#222;
+  float:left;
+}
+
+#sosyal{
+  float:right;
+  text-align:center;
+  line-height:2.2;
+}
+
+#sosyal li{
+  width:32px;
+  height:32px;
+  margin:8px 6px 0 6px;
+  float:left;
+  list-style-type:none;
+}
+
+#sosyal li a{
+  color:#999;
+}
+
+#sosyal li:first-child{
+  margin-left:0;
+}
+
+#sosyal li:last-child{
+  margin-right:0;
+}
+
+.player{
+  display:none;
+}
+
+@-webkit-keyframes glowOn {
+    to {
+      text-shadow: 0 0 10px #006CFE;
+    }
+}
+@-webkit-keyframes glowOff {
+    to {
+      text-shadow: 0 0 10px #D9534F;
+    }
+}
+
+#gecmis.online{
+  border:5px solid #006CFE;
+}
+#gecmis.offline{
+  border:5px solid #D9534F;
+}
+#gecmis{
+  width:360px;
+  height:200px;
+  margin:0;
+  padding:0;
+  background:#333;
+  overflow:auto;
+  position:absolute;
+  left:50%;
+  bottom:46px;
+  margin-left:-180px;
+  display:none;
+}
+
+#gecmis li{
+  color:#999;
+  padding:4px 10px;
+  list-style-type:none;
+}
+
+#gecmis li:nth-child(odd){
+  background:#222;
+}
+
+#gecmis li i{
+  margin-left:4px;
+  margin-right:10px;
+}
+
+*{border-radius:0 !important;}
+
+.song-wrapper{
+  /* display: flex; */
+}
+
+.card-wrapper{
+  padding: 10px;
+    border: 1px solid #4c1f1f;
+    margin: 10px;
+    box-shadow: 4px 4px #ef7a7a;
+}
+
+.image-wrapper img{
+  width: 200px;
+  height: auto;
+}
+
+.info{
+  display: grid;
+  position: relative;
+}
+
+.info span{
+  font-family: cursive;
+}
+
+.playIcon{
+  position: absolute;
+    right: 0px;
+}
+
+/* popup */
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+/* end */
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+textarea{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=password], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
   color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+input[type=submit]:hover {
+  background-color: #45a049;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.userLogo{
+  /* position: relative;
+  margin: auto 0;
+  left: 44%; */
 }
+
+.userLogo img{
+  width: 140px;
+  height: 90px;
+}
+
